# course_hub

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml
.specify/: feature.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_multilingual_search.py
app/: __init__.py  bootstrap.py  container.py  main.py  seed.py
app/admin/: auth.py  setup.py  views.py
app/api/: deps.py
app/api/routers/: catalog.py  health.py  (+2 more)
app/application/: errors.py
app/bot/: context.py  middleware.py  runner.py  states.py
app/core/: config.py  database.py  logging.py
specs/001-fastapi-telegram-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-multilingual-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-lava-payments/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/integration/: test_admin.py  test_bot_course_display.py  test_bot_language.py  test_bot_localized_catalog.py  test_bot_search_suggestions.py  test_categories.py  test_health.py  test_imported_catalog_review.py  test_lava_payments.py  test_localized_catalog.py  test_localized_orders.py  test_orders.py  test_parser_jobs.py  test_payments.py  test_search.py  test_search_suggestions.py
tests/unit/: test_catalog_localization.py  test_catalog_parser.py  test_localization_service.py  test_parser_dedupe.py  test_rate_limiter.py  test_suggestion_search.py  test_telegram_course_formatter.py
(+105 files in other folders)
